[tool.poetry]
name = "buses-on-the-map"
version = "0.1.0"
description = "Watch the buses via async python"
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
trio-websocket = "^0.9.0"
click = "^7.1.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
